[workspace]
resolver = "3"
members = ["."]

[workspace.package]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/oxidecomputer/oxide-tokio-rt"
license = "MPL-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(doc_cfg)"] }

[package]
name = "oxide-tokio-rt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme = "README.md"
description = "Shared Tokio runtime configuration for production Oxide software"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs --cfg=tokio_unstable"]

[lints]
workspace = true

[features]
default = ["rt-multi-thread"]
rt-multi-thread = ["tokio/rt-multi-thread"]

[dependencies.tokio]
version = "1.45.1"
features = ["rt"]

[target.'cfg(target_os = "illumos")'.dependencies.tokio-dtrace]
version = "0.1.0"

[dev-dependencies.tokio]
version = "1.45.1"
features = ["rt", "macros"]
