[workspace]
resolver = "3"
members = ["."]

[workspace.package]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/oxidecomputer/oxide-tokio-rt"
license = "MPL-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(doc_cfg)"] }

[package]
name = "oxide-tokio-rt"
version = "0.1.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme = "README.md"
description = "Shared Tokio runtime configuration for production Oxide software"

[package.metadata.docs.rs]
all-features = true
# enable tokio's unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable"]
# it's necessary to _also_ pass `--cfg tokio_unstable`
# to rustc, or else dependencies will not be enabled, and the docs build will fail.
rustc-args = ["--cfg", "tokio_unstable"]

[lints]
workspace = true

[features]
default = ["rt-multi-thread"]
rt-multi-thread = ["tokio/rt-multi-thread"]

[dependencies]
anyhow = "1"

[target.'cfg(unix)'.dependencies.nix]
version = "0.31"
features = ["signal"]

[dependencies.tokio]
version = "1.45.1"
features = ["rt"]

[target.'cfg(target_os = "illumos")'.dependencies.tokio-dtrace]
version = "0.1.0"

[dev-dependencies.tokio]
version = "1.45.1"
features = ["rt", "macros"]

[dev-dependencies]
libc = "0.2"
clap = { version = "4.5.58", features = ["derive"] }
